Fix measurement being too wide

--- a/nhs/src/main/resources/static/css/diary/checkin.css
+++ b/nhs/src/main/resources/static/css/diary/checkin.css
@@ -203,7 +203,7 @@ h1 {
 
 .measurement {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     gap: 1rem;
 }
